fix memory leaks, producers past 1 still hang

--- a/assignment2/CMakeLists.txt
+++ b/assignment2/CMakeLists.txt
@@ -9,3 +9,6 @@ SET(SOURCES
 
 ADD_EXECUTABLE(assignment2 ${SOURCES})
 LibChaos_Configure_Target(assignment2)
+
+GET_PROPERTY(CXXFLAGS TARGET assignment2 PROPERTY COMPILE_FLAGS)
+MESSAGE(STATUS ${CXXFLAGS})
