slowly tweaking passthough example

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "assignment2/libchaos"]
 	path = assignment2/libchaos
 	url = https://github.com/ChaoticConundrum/libchaos.git
+[submodule "final/libchaos"]
+	path = final/libchaos
+	url = ssh://veralez/git/libchaos.git
