--- a/final/fuse/Makefile
+++ b/final/fuse/Makefile
@@ -1,5 +1,4 @@
 
 all:
-	#gcc -W `pkg-config fuse3 --cflags --libs` -D_FILE_OFFSET_BITS=64 -o passthrough passthrough.c
-	gcc -W `pkg-config fuse3 --cflags --libs` -o passthrough passthrough.c
+	gcc -W -g `pkg-config fuse3 --cflags --libs` -o rulefs rulefs.c
 
