--- a/final/fuse/CMakeLists.txt
+++ b/final/fuse/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(RuleFS_SOURCES
 
 SET(TreeFS_SOURCES
     treefs.c
+    parceladapter.cpp
 )
 
 ADD_EXECUTABLE(rulefs ${RuleFS_SOURCES})
@@ -20,9 +21,6 @@ TARGET_INCLUDE_DIRECTORIES(rulefs PUBLIC ${FUSE3_INCLUDE_DIRS})
 TARGET_COMPILE_OPTIONS(rulefs PUBLIC ${FUSE3_CGLAGS_OTHER})
 
 ADD_EXECUTABLE(treefs ${TreeFS_SOURCES})
-TARGET_LINK_LIBRARIES(treefs ${FUSE3_LIBRARIES})
+TARGET_LINK_LIBRARIES(treefs ${FUSE3_LIBRARIES} chaos)
 TARGET_INCLUDE_DIRECTORIES(treefs PUBLIC ${FUSE3_INCLUDE_DIRS})
 TARGET_COMPILE_OPTIONS(treefs PUBLIC ${FUSE3_CGLAGS_OTHER})
-
-
-#LibChaos_Configure_Target(rulefs)
